# aevol-hpc

./: .gitignore  CMakeLists.txt  README.md  makefile
benchmarks/: benchmark.sh  benchmark_scheduling.sh  benchmark_weak_scaling.sh  compression.csv  kernel_timings_full.csv  results_cpu_all_omp_static.csv  results_cpu_single_openmp.csv  results_cpu_weak_scaling.csv  results_scheduling.csv  swap_strategies.csv
include/: Abstract_ExpManager.h  AeTime.h  Dna.h  DnaMutator.h  ExpManager.h  Gaussian.h  MutationEvent.h  Organism.h  Protein.h  RNA.h  Stats.h  Threefry.h  Timetracer.h  aevol_constants.h
include/cuda/: RandService.h  cuExpManager.h  cuIndividual.cuh  cuProtein.cuh  cuda_kernels.cuh  misc_functions.cuh
report/: analysis.ipynb  line_annotation.py  notes.md  report.bib  report.tex
report/img/: init_profile_debug.eps
src/: Abstract_ExpManager.cpp  AeTime.cpp  Dna.cpp  DnaMutator.cpp  ExpManager.cpp  MutationEvent.cpp  Organism.cpp  Stats.cpp  Threefry.cpp  main.cpp
src/cuda/: RandService.cu  cuExpManager.cu  cuIndividual.cu  cuProtein.cu  misc_functions.cu
